# fridgeos

./: .gitignore  LICENSE.md  README.md  TODO.md  pyproject.toml
demo-scripts/: 1k_statemachine_script.py  demo-1k-manual-recycle.py  demo-1k-recycle-now.py  demo-1k-sm.py  demo-hal-and-statemachine.py  demo-hal-client.py  demo-hal-server.py  (+4 more)
fridgeos/: __init__.py  hal.py  logger.py  pyproject.toml  statemachine.py
fridgeos/calibration-curves/default/: DC2021.csv  DC2023.csv  RO600.csv
fridgeos/drivers/: haldrivers.py  korad_kd3005p.py  srs_sim921.py  srs_sim922.py
fridgeos/fridgeos/: LICENSE.md  __init__.py  hal.py  logger.py  metricserver.py  scraper.py  statemachine.py
fridgeos/fridgeos/calibration-curves/: DC-2014.csv  DC2021.csv  DT470.csv
fridgeos/fridgeos/drivers/: CTC100.py  __init__.py  dummy.py  haldrivers.py  swarm.py
fridgeos/fridgeos/hal/: client.py  server.py
fridgeos/fridgeos/hal/drivers/: haldrivers.py
fridgeos/fridgeos/monitor/: server.py
fridgeos/fridgeos/statemachine/: client.py  server.py
fridgeos/fridgeos/statemachine/unused/: continous_dr.py  continous_dr_sm_config.toml
fridgeos/fridgeos/zmqhelper/: README.txt  client.py
fridgeos/hal/: server.py
fridgeos/monitor/: server.py
fridgeos/statemachine/: client.py  continous_dr.py  mytemptomlfile.toml  server.py  single_shot_1k.py  single_shot_1k_sm_config.toml  state_machine_1k.py  state_machine_1k.toml
fridgeos/statemachine/saewoo-reference/: s_m.js
fridgeos/statemachine/unused/: single_shot_1k.py
fridgeos/statemachine/utilities/: assign-persistent-usb.sh
(+59 files in other folders)
